# tdl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  create_tag.yml  release.yml
src/: cli.rs  client.rs  config.rs  decryption.rs  download.rs  lib.rs  login.rs  main.rs  models.rs
src/api/: auth.rs  media.rs  mod.rs  models.rs  search.rs
