[package]
name = "tdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.8"
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11.11", features = ["json","rustls-tls","stream"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
serde_urlencoded = "0.7.1"
anyhow = "1.0.58"
config = {version = "0.13.1", features = ["toml"]}
lazy_static = "1.4.0"
notify = "4.0.17"
toml = "0.5.9"
chrono = "0.4.19"
base64 = "0.13.0"
rust-crypto = "0.2.36"
shellexpand = "2.1.0"
regex = "1.6.0"
metaflac = "0.2.5"
log = "0.4.17"
env_logger = "0.9.0"
sanitize-filename = "0.4.0"
futures = "0.3.21"
indicatif = "0.16.2"
[dependencies.serde_with]
version = "1.14.0"
features = [ "chrono" ]

[profile.release]
opt-level = 3
lto = true
