[package]
name = "tdl"
description = "A command line tool for downloading files from the TIDAL API"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.15"
clap_complete = "3.2.3"
clap_complete_fig = "3.2.4"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.9"
reqwest-middleware = "0.2.3"
reqwest-retry = "0.2.3"
reqwest = { version = "0.11.11", features = [
    "json",
    "rustls-tls",
    "stream",
    "gzip",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
serde_urlencoded = "0.7.1"
anyhow = "1.0.58"
config = { version = "0.13.1", features = ["toml"] }
lazy_static = "1.4.0"
toml = "0.5.9"
chrono = "0.4.21"
base64 = "0.13.0"
regex = "1.6.0"
metaflac = "0.2.5"
log = "0.4.17"
env_logger = "0.9.0"
shellexpand = "2.1.0"
futures = "0.3.21"
indicatif = { version = "0.17.0", features = ["improved_unicode"] }
console = "0.15.0"
tabled = "0.8.0"
sanitize-filename = "0.4.0"
http-cache-reqwest = "0.11.1"
phf = { version = "0.11", features = ["macros"] }

[dependencies.serde_with]
version = "2.0.0"
features = ["chrono"]

[profile.release]
opt-level = 3
lto = true
